iris: add Metal custom and noise textures